# solana-stablecoin-standard

./: .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json
.audit/: 2026-03-07-audit-report.md
backend/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: main.ts
backend/src/middleware/: auth.ts  rate-limit.ts
backend/src/routes/: compliance.ts  health.ts  operations.ts  roles.ts
backend/src/services/: event-listener.ts  solana.ts  webhook.ts
benchmark/: test-report-2026-03-08T05-39-39.md
cli/: Cargo.toml  package-lock.json  package.json  tsconfig.json
cli/src/: config.rs  context.ts  index.ts  main.rs  utils.rs
cli/src/commands/: audit_log.rs  blacklist.rs  burn.rs  compliance.ts  confidential.rs  fees.rs  freeze.rs  holders.rs  info.rs  init.rs  init.ts  mint.rs  minters.rs  mod.rs  operations.ts  pause.rs  roles.rs  roles.ts  seize.rs  supply.rs  thaw.rs  tui.rs
deployments/: devnet-sss1-proof.json  devnet-sss2-proof.json  devnet-sss3-proof.json  devnet-sss4-proof.json  devnet.md  sss-core.json  sss-transfer-hook.json
docs/: API.md  ARCHITECTURE.md  BOUNTY_COMPLIANCE.md  CLI.md  COMPLIANCE.md  CU_AND_ZEROCOPY_ASSESSMENT.md  HONEST_ASSESSMENT.md  OPERATIONS.md  PYTH_ORACLE_AUDIT.md  REPORTER_ANALYSIS.md  SDK.md  SECURITY.md  SSS-1.md  SSS-2.md  SSS-3.md  SSS-4.md  TEST_REPORT.md  TRIDENT_AND_TOKEN2022.md  TRIDENT_INTEGRATION_ANALYSIS.md  TUI_VS_FRONTEND.md
example/frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
example/frontend/app/: globals.css  layout.tsx  page.tsx
example/frontend/components/: WalletButton.tsx
example/frontend/lib/: errors.ts
frontend/: .env.example  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/history/: page.tsx
programs/sss-core/: Cargo.toml
programs/sss-core/src/: constants.rs  error.rs  events.rs  lib.rs
programs/sss-core/src/instructions/: burn_tokens.rs  freeze_account.rs  initialize.rs  mint_tokens.rs  pause.rs  seize.rs  thaw_account.rs  unpause.rs
programs/sss-core/src/instructions/admin/: manage_roles.rs  mod.rs  transfer_authority.rs  update_minter.rs  update_oracle.rs  update_supply_cap.rs  update_transfer_fee.rs  withdraw_withheld.rs
programs/sss-core/src/state/: config.rs  role.rs
programs/sss-transfer-hook/: Cargo.toml
reports/: README.md
sdk/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
sdk/src/: client.ts  errors.ts  index.ts  pda.ts  types.ts
sdk/tests/: confidential.test.ts  exports.test.ts  pda.test.ts
tests/: helpers.ts  oracle.test.ts  package-lock.json  package.json  reporter.ts  roles.test.ts  security.test.ts  setup-report.ts  sss-1.test.ts  sss-2.test.ts  sss-3.test.ts  sss-4.test.ts  tsconfig.json
trident-tests/: Cargo.toml  README.md  TRIDENT_ASSESSMENT.md  Trident.toml
trident-tests/fuzz_0/: fuzz_accounts.rs  test_fuzz.rs  types.rs
trident-tests/src/: arithmetic.rs  authority_transfer.rs  fee_invariants.rs  invariants.rs  lib.rs  pause_bypass.rs  role_escalation.rs  supply_cap.rs
(+34 files in other folders)
