[package]
name = "sss-cli"
version = "0.1.0"
description = "Solana Stablecoin Standard CLI"
edition = "2021"

[[bin]]
name = "sss-token"
path = "src/main.rs"

[dependencies]
sss-core = { path = "../programs/sss-core", features = ["no-entrypoint"] }
sss-transfer-hook = { path = "../programs/sss-transfer-hook", features = ["no-entrypoint"] }
anchor-lang = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = "2.2"
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "3"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
