[workspace]

[package]
name = "fuzz_tests"
version = "0.1.0"
description = "Created with Trident"
edition = "2021"

[dependencies]
borsh = "1.5.3"
sss-core = { path = "../programs/sss-core", features = ["no-entrypoint"] }
sss-transfer-hook = { path = "../programs/sss-transfer-hook", features = ["no-entrypoint"] }
anchor-lang = "0.31.1"

[dependencies.trident-fuzz]
version = "0.12.0"

[dev-dependencies]
proptest = "1.6"

[[bin]]
name = "fuzz_0"
path = "fuzz_0/test_fuzz.rs"
